<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_name">GoFavor</string>
    <string name="greeting">Hola, otra vez</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="forgot_password"><u>Olvidé mi contraseña</u></string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="or">ó</string>
    <string name="logo_description">Logotipo de GoFavor</string>
    <string name="icon_email">Ícono de correo</string>
    <string name="icon_password">Ícono de contraseña</string>
    <string name="logo_desc">Logo de GoFavor</string>
    <string name="registro">Registro</string>
    <string name="registrar">Registrar Administrador</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo Electrónico</string>
    <string name="cedula">Cédula de identidad</string>
    <string name="adjuntar_cedula">Adjuntar Imagen de Cédula</string>
    <string name="adjuntar_perfil">Adjuntar Imagen de Perfil</string>
    <string name="tomar_selfie">Tomar Selfie con Cédula</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmación de contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="icon_user">Ícono de usuario</string>
    <string name="icon_id">Ícono de cédula</string>
    <string name="icon_attach">Ícono de adjuntar cédula</string>
    <string name="icon_camera">Ícono de cámara</string>
    <string name="icon_lock">Ícono de contraseña</string>
    <string name="icon_back">Atrás</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="icon_request">Solicitud enviada</string>
    <string name="solicitud_enviada">Solicitud de favor enviada</string>
    <string name="icon_check">Confirmación</string>
    <string name="favor_completado">Confirmación de favor completado</string>
    <string name="icon_message">Mensaje nuevo</string>
    <string name="nuevo_mensaje">Tienes un nuevo mensaje</string>
    <string name="icon_payment">Pago</string>
    <string name="pago_realizado">Pago realizado</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombre_colaborador">Colaborador Caleb</string>
    <string name="ciudad_colaborador">Quito</string>
    <string name="favores_realizados">Favores Realizados</string>
    <string name="reputacion">Reputación</string>
    <string name="ganancias_mensuales">Ganancias Mensuales</string>
    <string name="favores_solicitados">Favores Solicitados</string>
    <string name="historial_reciente">Historial Reciente</string>
    <string name="actividad_1">Pasear perro</string>
    <string name="actividad_2">Recoger paquete</string>
    <string name="actividad_3">Dar examen</string>
    <string name="actividad_1_dias">3 días</string>
    <string name="actividad_2_dias">1 día</string>
    <string name="actividad_3_dias">1 día</string>
    <string name="actividad_1_puntos">+15</string>
    <string name="actividad_2_puntos">+3</string>
    <string name="actividad_3_puntos">+16</string>
    <string name="icon_atras">Icono Atrás</string>
    <string name="icon_menu">Icono Menú</string>
    <string name="icon_ubicacion">Icono Ubicación</string>
    <string name="icon_perfil">Imagen de perfil</string>
    <string name="icon_edit">Editar perfil</string>
    <string name="avatar">Avatar del usuario</string>
    <string name="ubicacion">Quito</string>
    <string name="tarea_1">Pasear perro</string>
    <string name="tarea_fecha_1">3 días</string>
    <string name="retiro">Retiro</string>
    <string name="icon_money">Icono de dinero</string>
    <string name="subir_comprobante">Subir Comprobante</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="title_retiro">Retiro</string>
    <string name="administracion_retiros">Administración de Retiros</string>
    <string name="monto_a_retirar">Monto a retirar: %1$s</string>
    <string name="banco_pichincha">Banco Pichincha C.A.</string>
    <string name="banco_guayaquil">Banco Guayaquil S.A.</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_monto">Monto</string>
    <string name="label_institucion">Institución</string>
    <string name="label_num_cuenta">Número de Cuenta</string>
    <string name="label_cedula">Cédula</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_titular">Nombre del Titular</string>
    <string name="value_nombre">Nombre</string>
    <string name="value_valor">Valor</string>
    <string name="btn_subir">Subir Comprobante</string>
    <string name="btn_aprobar">Aprobar</string>
    <string name="btn_rechazar">Rechazar</string>
    <string name="pendiente">Pendientes</string>
    <string name="rechazado">Rechazadas</string>
    <string name="realizadas">Realizadas</string>
    <string name="AdminPerfil">Administración
de Perfiles</string>
    <string name="title_perfiles">Administración de Perfiles</string>
    <string name="toggle_pendientes">Pendientes</string>
    <string name="toggle_realizadas">Realizadas</string>
    <string name="toggle_rechazadas">Rechazadas</string>
    <string name="profile1_name">Caleb Castro</string>
    <string name="profile1_phone">1234567890</string>
    <string name="profile1_email">caleb@correo.com</string>
    <string name="profile2_name">Susana Soria</string>
    <string name="profile2_phone">0987654321</string>
    <string name="profile2_email">susana@correo.com</string>
    <string name="profile3_name">Mar Malek</string>
    <string name="profile3_phone">1122334455</string>
    <string name="profile3_email">mar@correo.com</string>
    <string name="profile4_name">Oscar Ortiz</string>
    <string name="profile4_phone">112223330</string>
    <string name="profile4_email">oscar@correo.com</string>
    <string name="AD_titulo_perfil">Perfil</string>
    <string name="AD_etiqueta_nombre">Nombre</string>
    <string name="AD_etiqueta_apellido">Apellido</string>
    <string name="AD_etiqueta_correo">Correo electrónico</string>
    <string name="AD_texto_nombre">Ariel</string>
    <string name="AD_texto_apellido">Amaguaña</string>
    <string name="AD_texto_correo">ariel.amaguana@epn.edu.ec</string>
    <string name="AD_boton_cedula">Ver Cédula de Identidad</string>
    <string name="AD_boton_selfie">Ver Selfie con la Cédula</string>
    <string name="AD_motivo_rechazo">Motivo de rechazo:</string>
    <string name="AD_texto_motivo">Motivo</string>
    <string name="AD_texto_solicitud">Solicitado el 12/05/2024</string>
    <string name="AD_boton_aprobar">Aprobar</string>
    <string name="AD_boton_rechazar">Rechazar</string>
    <string name="FA_titulo_favor">Título del Favor</string>
    <string name="FA_nombre_usuario">Nombre</string>
    <string name="FA_etiqueta_cedula">Cédula</string>
    <string name="FA_etiqueta_correo">Correo Electrónico</string>
    <string name="FA_estado_disponible">Disponible</string>
    <string name="FA_descripcion">Descripción:</string>
    <string name="FA_descripcion_texto">Describe</string>
    <string name="FA_precio_favor">$8</string>
    <string name="FA_ubicacion">Ubicación</string>
    <string name="FA_ubicacion_valor">Nombre</string>
    <string name="FA_fecha_hora">Fecha y Hora</string>
    <string name="FA_fecha_hora_valor">Viernes</string>
    <string name="FA_evidencia">Evidencia a entregar</string>
    <string name="FA_evidencia_valor">Enviar fotos o videos</string>
    <string name="FA_contra_oferta">Contra Oferta</string>
    <string name="FA_aprobar">Aprobar</string>
    <string name="FA_rechazar">Rechazar</string>
    <string name="FA_mensaje_sin_oferta">No existen Ofertas</string>
    <string name="FA_estado_en_proceso">En Proceso</string>
    <string name="SF_titulo">Título</string>
    <string name="SF_descripcion">Descripción</string>
    <string name="SF_ubicacion">Ubicación</string>
    <string name="SF_fecha_hora">Fecha y Hora</string>
    <string name="SF_recompensa">Recompensa</string>
    <string name="SF_tipo_evidencia">Tipo de Evidencia:</string>
    <string name="SF_opcion_foto">Foto</string>
    <string name="SF_opcion_video">Video</string>
    <string name="SF_opcion_foto_texto">Foto + Texto</string>
    <string name="NC_titulo_ventana">Ventana nueva cuenta</string>
    <string name="NC_banco">Banco</string>
    <string name="NC_tipo_cuenta">Tipo de cuenta</string>
    <string name="NC_num_cuenta">Num. Cuenta</string>
    <string name="NC_titular">Titular</string>
    <string name="NC_cedula">Cédula</string>
    <string name="NT_titulo_ventana">Ventana nueva Tarjeta</string>
    <string name="NT_tipo_tarjeta">Tipo de Tarjeta</string>
    <string name="NT_num_tarjeta">Num. Tarjeta</string>
    <string name="NT_nombre_tarjeta">Nombre de la tarjeta</string>
    <string name="NT_fecha_expiracion">Fecha de expiración</string>
    <string name="NT_cvv">CVV</string>
    <string name="global_aceptar">Aceptar</string>
    <string name="global_cancelar">Cancelar</string>
    <string name="CH_titulo_pantalla">Pantalla Chats Específicos</string>
    <string name="CH_nombre_usuario">Pedrito</string>
    <string name="CH_mensaje_ejemplo">Mensaje</string>
    <string name="CH_hint_mensaje">Mensaje</string>
    <string name="CH_enviar_mensaje">Enviar</string>
    <string name="CH_icono_imagen_descripcion">Adjuntar imagen</string>
    <string name="CH_icono_enviar_descripcion">Enviar mensaje</string>
    <string name="PP_favores_realizados">Favores realizados</string>
    <string name="PP_reputacion">Reputación</string>
    <string name="PP_texto_favores_realizados">3</string>
    <string name="PP_texto_Reputacion">5</string>
    <string name="PP_titulo_favor_1">Cuidar conejo</string>
    <string name="PP_descripcion_favor_1">Me iré por 3 días, alguien que vea a mi mascota.</string>
    <string name="PP_precio_favor_1">$20</string>
    <string name="PP_titulo_favor_2">Recoger fruta</string>
    <string name="PP_descripcion_favor_2">Mi árbol tiene mucha fruta, necesito ayuda para recogerla.</string>
    <string name="PP_precio_favor_2">$8</string>
    <string name="PP_titulo_favor_3">Barrer vereda</string>
    <string name="PP_descripcion_favor_3">Mi vereda está muy sucia, solo quiero que la barran.</string>
    <string name="PP_precio_favor_3">$10</string>
    <string name="PP_distancia_favor">A 1km</string>
    <string name="PP_nav_inicio">Inicio</string>
    <string name="PP_nav_favores">Favores</string>
    <string name="PP_nav_chats">Chats</string>
    <string name="PP_nav_ganancias">Ganancias</string>
    <string name="PP_anterior">&lt;&lt; Anterior</string>
    <string name="PP_siguiente">Siguiente &gt;&gt;</string>
    <string name="FA2_estado_disponible">Disponible</string>
    <string name="FA2_estado_realizados">Realizados</string>
    <string name="FA2_distancia">A 1km</string>
    <string name="FA2_titulo_favor">Título favor</string>
    <string name="FA2_descripcion_favor">Descripción</string>
    <string name="FA2_precio_favor">$8</string>
    <string name="FA2_solicitar_favor">Solicitar Favor</string>
    <string name="CH_filtro_realizados">Realizados</string>
    <string name="CH_filtro_en_progreso">En Progreso</string>
    <string name="CH_filtro_no_realizado">No realizado</string>
    <string name="CH2_nombre_usuario">Usuario</string>
    <string name="CH2_mensaje_ejemplo">Mensaje</string>
    <string name="GA_balance_actual">Balance Actual</string>
    <string name="GA_monto_final_retirar">Monto final a retirar:</string>
    <string name="GA_cuenta_bancaria">Cuenta Bancaria</string>
    <string name="GA_agregar_cuenta">Agregar cuenta:</string>
    <string name="GA_cambiar">Cambiar</string>
</resources>